platforms/ios/build/emulator/metadata-generation-stderr-i386.txt
clang version 4.0.0 (tags/RELEASE_400/final)
Target: i386-apple-darwin17.2.0
Thread model: posix
InstalledDir: 
clang Invocation:
 "clang-tool" "-cc1" "-triple" "i386-apple-ios8.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "yonah" "-target-linker-version" "301.1" "-v" "-dwarf-column-info" "-debugger-tuning=lldb" "-resource-dir" "../lib/clang/4.0.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk" "-iquote" "/Users/shiv19/Library/Developer/Xcode/DerivedData/SETDemo-apcmalqrilqrnycuhvktfxgtiqmf/Build/Products/Debug-iphonesimulator/SDWebImage/SDWebImage.framework/Headers" "-D" "__NATIVESCRIPT_METADATA_GENERATOR=1" "-I" "/Users/shiv19/Work/NsExp/SET" "-I" "Demo/platforms/ios/build/emulator/include" "-I" "/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal" "-I" "/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal/TKLiveSync/include" "-F/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/build/emulator" "-F/Users/shiv19/Library/Developer/Xcode/DerivedData/SETDemo-apcmalqrilqrnycuhvktfxgtiqmf/Build/Products/Debug-iphonesimulator/SDWebImage" "-F/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal/" "-F/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios" "-D" "COCOAPODS=1" "-D" "DEBUG=1" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-Wno-nullability-completeness" "-Wno-expansion-to-defined" "-std=gnu99" "-fdebug-compilation-dir" "/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

ignoring nonexistent directory "/Users/shiv19/Work/NsExp/SET"
ignoring nonexistent directory "Demo/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Users/shiv19/Library/Developer/Xcode/DerivedData/SETDemo-apcmalqrilqrnycuhvktfxgtiqmf/Build/Products/Debug-iphonesimulator/SDWebImage"
ignoring nonexistent directory "/Users/shiv19/Library/Developer/Xcode/DerivedData/SETDemo-apcmalqrilqrnycuhvktfxgtiqmf/Build/Products/Debug-iphonesimulator/SDWebImage/SDWebImage.framework/Headers"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal
 /Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal/TKLiveSync/include
 /Users/shiv19/Work/NsExp/SET Demo/platforms/ios/build/emulator (framework directory)
 /Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal (framework directory)
 /Users/shiv19/Work/NsExp/SET Demo/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios (framework directory)
 ../lib/clang/4.0.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/System/Library/Frameworks (framework directory)
End of search list.
clang version 4.0.0 (tags/RELEASE_400/final)
Target: i386-apple-darwin17.2.0
Thread model: posix
InstalledDir: 
clang Invocation:
 "objc-metadata-generator" "-cc1" "-triple" "i386-apple-ios8.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "yonah" "-target-linker-version" "301.1" "-v" "-dwarf-column-info" "-debugger-tuning=lldb" "-resource-dir" "../lib/clang/4.0.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk" "-iquote" "/Users/shiv19/Library/Developer/Xcode/DerivedData/SETDemo-apcmalqrilqrnycuhvktfxgtiqmf/Build/Products/Debug-iphonesimulator/SDWebImage/SDWebImage.framework/Headers" "-D" "__NATIVESCRIPT_METADATA_GENERATOR=1" "-I" "/Users/shiv19/Work/NsExp/SET" "-I" "Demo/platforms/ios/build/emulator/include" "-I" "/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal" "-I" "/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal/TKLiveSync/include" "-F/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/build/emulator" "-F/Users/shiv19/Library/Developer/Xcode/DerivedData/SETDemo-apcmalqrilqrnycuhvktfxgtiqmf/Build/Products/Debug-iphonesimulator/SDWebImage" "-F/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal/" "-F/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios" "-D" "COCOAPODS=1" "-D" "DEBUG=1" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-Wno-nullability-completeness" "-Wno-expansion-to-defined" "-std=gnu99" "-fdebug-compilation-dir" "/Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

clang -cc1 version 4.0.0 based upon LLVM 4.0.0 default target x86_64-apple-darwin17.2.0
ignoring nonexistent directory "/Users/shiv19/Work/NsExp/SET"
ignoring nonexistent directory "Demo/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Users/shiv19/Library/Developer/Xcode/DerivedData/SETDemo-apcmalqrilqrnycuhvktfxgtiqmf/Build/Products/Debug-iphonesimulator/SDWebImage"
ignoring nonexistent directory "/Users/shiv19/Library/Developer/Xcode/DerivedData/SETDemo-apcmalqrilqrnycuhvktfxgtiqmf/Build/Products/Debug-iphonesimulator/SDWebImage/SDWebImage.framework/Headers"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal
 /Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal/TKLiveSync/include
 /Users/shiv19/Work/NsExp/SET Demo/platforms/ios/build/emulator (framework directory)
 /Users/shiv19/Work/NsExp/SET Demo/platforms/ios/internal (framework directory)
 /Users/shiv19/Work/NsExp/SET Demo/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios (framework directory)
 ../lib/clang/4.0.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/System/Library/Frameworks (framework directory)
End of search list.
In file included from umbrella.h:498:
In file included from /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk/System/Library/Frameworks/CoreML.framework/Headers/CoreML.h:12:
/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/System/Library/Frameworks/CoreML.framework/Headers/MLFeatureDescription.h:41:12: error: attributes may not be specified on a category
@interface MLFeatureDescription (MLFeatureValueConstraints)
           ^
In file included from umbrella.h:628:
/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/usr/include/objc/message.h:202:1: warning: incompatible redeclaration of library function 'objc_msgSend_fpret' [-Wincompatible-library-redeclaration]
objc_msgSend_fpret(id _Nullable self, SEL _Nonnull op, ...)
^
/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/usr/include/objc/message.h:202:1: note: 'objc_msgSend_fpret' is a builtin with type 'long double (id, SEL, ...)'
In file included from umbrella.h:645:
In file included from /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/System/Library/Frameworks/FileProvider.framework/Headers/FileProvider.h:8:
/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/System/Library/Frameworks/FileProvider.framework/Headers/NSFileProviderDomain.h:71:12: error: attributes may not be specified on a category
@interface NSFileProviderExtension (NSFileProviderDomain)
           ^
In file included from umbrella.h:682:
/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.1.sdk/System/Library/Frameworks/IOSurface.framework/Headers/IOSurfaceBase.h:46:10: fatal error: 'xpc/xpc.h' file not found
#include <xpc/xpc.h>
         ^~~~~~~~~~~
1 warning and 3 errors generated.
